# smartass

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  data.json  pyproject.toml
.github/workflows/: build-debs.yml  ci.yml
debian/: ai.talonic.smartass.desktop  changelog  control  copyright  rules  smartass-daemon.service  smartass-tray.desktop  smartass.dirs  smartass.install  smartass.postinst  smartass.prerm
docs/: manual_qa.md
docs/superpowers/plans/: 2026-04-21-smartass-mvp.md
docs/superpowers/specs/: 2026-04-21-smartass-design.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5d0705f8db6c7876___init___py.html  z_5e2abefff8e08eb8___main___py.html  z_5e2abefff8e08eb8_http_py.html  z_5e2abefff8e08eb8_plugin_manager_py.html  z_5e2abefff8e08eb8_plugin_object_py.html  z_5e2abefff8e08eb8_service_py.html  z_73b02519c18c3757_api_py.html  z_73b02519c18c3757_plugin_py.html  z_73b02519c18c3757_ui_py.html  z_bc932f784ac37227___main___py.html  z_bc932f784ac37227_app_py.html  z_bc932f784ac37227_daemon_client_py.html  z_bc932f784ac37227_main_window_py.html  z_bc932f784ac37227_schema_form_py.html  z_bc932f784ac37227_settings_tab_py.html  z_bc932f784ac37227_tray_icon_py.html  z_f7b01c6c64a3fa7f_config_py.html  z_f7b01c6c64a3fa7f_dbus_names_py.html  z_f7b01c6c64a3fa7f_manifest_py.html  z_f7b01c6c64a3fa7f_paths_py.html  z_f7b01c6c64a3fa7f_plugin_interface_py.html
smartass/: __init__.py  smartass.py
smartass/core/: config.py  dbus_names.py  manifest.py  paths.py  plugin_interface.py
smartass/daemon/: __main__.py  http.py  plugin_manager.py  plugin_object.py  service.py
smartass/plugins/weather/: __init__.py  api.py  manifest.toml  plugin.py  ui.py
smartass/tray/: __main__.py  app.py  daemon_client.py  main_window.py  schema_form.py  settings_tab.py  tray_icon.py
tests/: __init__.py  test_smartass.py
tests/_fixtures/: hello_plugin.py
tests/core/: test_config.py  test_dbus_names.py  test_manifest.py  test_paths.py  test_plugin_interface.py  test_plugin_schema.py
tests/daemon/: test_http.py  test_plugin_manager_discovery.py  test_plugin_manager_lifecycle.py  test_service_core.py
tests/integration/: test_daemon_weather.py  test_plugin_object.py
tests/plugins/weather/: test_api.py  test_plugin.py
