[project]
name = "smartass"
version = "0.1.0"
description = "Smartass — desktop smart-assistant app for Ubuntu (tray + plugin host)"
authors = [
    {name="Saurabh Khanduja", email="saurabh@talonic.ai"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["desktop", "assistant", "gnome", "ubuntu", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Gnome",
]
dependencies = [
    "PySide6 (>=6.6.0, <7.0.0)",
    "dbus-next (>=0.2.3, <1.0.0)",
    "httpx (>=0.27.0, <1.0.0)",
    "tomli-w (>=1.0.0, <2.0.0)",
    "secretstorage (>=3.3.3, <4.0.0)",
]

[project.scripts]
smartass-daemon = "smartass.daemon.__main__:main"
smartass-tray = "smartass.tray.__main__:main"

[project.urls]
repository = "https://github.com/saurabheights/smartass"
"Bug Tracker" = "https://github.com/saurabheights/smartass/issues"

[dependency-groups]
dev = [
    "ruff (>=0.8.4, <1.0.0)",
    "mypy (>=1.14.1, <2.0.0)",
    "pre-commit (>=4.0.1, <5.0.0)",
    "pytest (>=8.3.4, <9.0.0)",
    "pytest-asyncio (>=0.24.0, <1.0.0)",
    "pytest-cov (>=6.0.0, <7.0.0)",
    "pyupgrade (>=3.17.0, <4.0.0)",
    "respx (>=0.21.1, <1.0.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--cov=smartass/",
    "-p no:cacheprovider",
]
asyncio_mode = "auto"

[tool.coverage.run]
data_file = '.cache/.coverage'

[tool.coverage.report]
skip_empty = true

[tool.mypy]
cache_dir = '.cache/.mypy_cache'

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
cache-dir = '.cache/.ruff_cache'
exclude = [".cache", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
